[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/bullet.gd" type="Script" id=1]
[ext_resource path="res://sprites/shotThin.png" type="Texture" id=2]
[ext_resource path="res://sprites/smokeWhite1.png" type="Texture" id=3]
[ext_resource path="res://sprites/explosion2.png" type="Texture" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 4.53806

[sub_resource type="CanvasItemMaterial" id=2]

[sub_resource type="Curve" id=3]
max_value = 3.0
_data = [ Vector2( 0, 2.00775 ), 0.0, 0.0, 0, 0, Vector2( 0.674074, 0.0168457 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=4]
resource_local_to_scene = true
offsets = PoolRealArray( 0.00892857, 1 )
colors = PoolColorArray( 1, 0, 0, 1, 0.992157, 1, 0, 1 )

[sub_resource type="Animation" id=5]
resource_name = "explode"
tracks/0/type = "value"
tracks/0/path = NodePath("self_destruction:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 4 ) ]
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("self_destruction:scale:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0.1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.9 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("self_destruction:scale:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0.1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.9 )
}
tracks/3/type = "value"
tracks/3/path = NodePath("self_destruction:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="bullet" type="Area2D"]
gravity_vec = Vector2( 0, 0 )
collision_layer = 8
collision_mask = 7
script = ExtResource( 1 )

[node name="sprite" type="Sprite" parent="."]
rotation = 1.5708
texture = ExtResource( 2 )

[node name="collision" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 1 )

[node name="notifier" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0.00628071, -0.111355 )
rotation = 1.56037
scale = Vector2( 0.433445, 1.0107 )

[node name="smoke" type="CPUParticles2D" parent="."]
material = SubResource( 2 )
scale = Vector2( 0.1, 0.1 )
amount = 4
local_coords = false
texture = ExtResource( 3 )
gravity = Vector2( 0, 0 )
scale_amount = 0.1
scale_amount_random = 0.1
scale_amount_curve = SubResource( 3 )
color_ramp = SubResource( 4 )
__meta__ = {
"_editor_description_": "	
	"
}

[node name="self_destruction" type="Sprite" parent="."]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 4 )

[node name="anim_self_destruction" type="AnimationPlayer" parent="."]
anims/explode = SubResource( 5 )
[connection signal="body_entered" from="." to="." method="_on_bullet_body_entered"]
[connection signal="screen_exited" from="notifier" to="." method="_on_notifier_screen_exited"]
